--- a/resources/css/popup.css
+++ b/resources/css/popup.css
@@ -1,3 +1,6 @@
+/* Copyright 2016 TBD */
+/* https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE */
+
 nav {
     line-height: normal;
 }
@@ -125,7 +128,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 
 #mainTitle {
     margin-bottom: 0;
-    margin-top: 3px;
+    margin-top: 8px;
     margin-left: -50px;
 }
 
