Updated Licenses with company name and year

--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,4 @@
-/* Copyright 2016 TBD */
+/* Copyright 2016 Redbrick Technologies, Inc. */
 /* https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE */
 
 nav {
