Initial Firefox support. Removed DM for the moment as it's not working in FF. only other outstanding issue is file uploads don't work due to bug with FF webExtension. Bug has been submitted: https://bugzilla.mozilla.org/show_bug.cgi?id=1292701

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -4,6 +4,12 @@
 /* Copyright 2016 Redbrick Technologies, Inc. */
 /* https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE */
 
+html, body {
+  min-width: 500px;
+  min-height: 400px;
+  max-height: 600px; 
+  overflow: auto;
+}
 
 body {
 	font-family: 'Source Sans Pro',Arial,sans-serif;
