--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -5,10 +5,10 @@
 /* https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE */
 
 html, body {
-  min-width: 500px;
+  min-width: 400px;
   min-height: 400px;
-  max-height: 600px; 
   overflow: auto;
+  -ms-overflow-style: none;
 }
 
 body {
