--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -234,7 +234,18 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	padding-bottom: 5px;
 	position: absolute;
 	color: #fff;
-	right: 10px;
+	right: 5px;
+	top: 18px;
+}
+
+#rate {
+	height: 25px;
+	margin-bottom: 0;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	position: absolute;
+	color: #fff;
+	right: 32.5px;
 	top: 18px;
 }
 
