EXT136 rate me button added

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -154,6 +154,10 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	text-align: center;
 }
 
+#rateSection{
+	display: none;
+}
+
 .addTemplateLabel {
 	padding-left: 0;
 }
