Ext 612 assign templates to projects (#31)
* EXT 612 Add support for specifying projects for templates

* EXT 612 Add Projects field to template edit UI

* EXT 612 Fix logic to check if template already exists for a given project

* EXT 612 Add support for editing name, issue type and projects (not just text)

* EXT 612 Refactor templates to be saved with a hash as key instead of the template name

* Add templates with same name to test file

* EXT 612 Change template data format to support templates with same name

* Delete test files

* Update readme

* EXT 612 Use template for collapsible template editor and fix default template dropdown

* Fix indentation

* Create a class for bold font

* Create a utils file for common functions

* Fix wrongly named variable

* Fix comment

* Fix lint

* EXT 612 Add project, no issue type to override order

* New lines

* EXT 612 Add validation cases for default template and same project, no issue

* EXT 612 Optimize template override logic

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -58,8 +58,11 @@ h5 {
 	padding-bottom: 0;
 }
 
-.row {
+.row:not(.auto-height) {
 	height: 37px;
+}
+
+.row {
 	margin-bottom: 10px;
 }
 
@@ -70,6 +73,11 @@ h5 {
 .divider {
 	margin-bottom: 10px;
 	overflow: visible;
+}
+
+.invisible-divider {
+	height: 1px;
+	margin-bottom: 10px;
 }
 
 /*noinspection CssUnusedSymbol*/
@@ -94,10 +102,6 @@ h5 {
 /*noinspection CssUnusedSymbol,CssUnusedSymbol*/
 .input-field .prefix.active {
 	color: #3174F1;
-}
-
-.input-field .prefix ~ textarea {
-	width: calc(100% - 4rem) !important;
 }
 
 /*noinspection CssUnusedSymbol*/
@@ -307,4 +311,8 @@ textarea.materialize-textarea:focus:not([readonly]) {
 
 .btn-floating i {
 	font-size: 1.3rem;
+}
+
+.font-bold {
+	font-weight: bold;
 }
