--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -247,28 +247,38 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	top: 18px;
 }
 
-.collection-item {
-	padding-top: 5px !important;
-	padding-bottom: 5px !important;
-	padding-right: 5px !important;
-	width: 100% !important;
+.customDomainList {
+	margin-top: 10px;
+	display: none;
+}
+
+.custom-domain-collection {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	width: 100%;
 }
 
 .remove-margin {
-	padding-top: 0px !important;
-	padding-bottom: 0px !important;
-	margin-bottom: 0px !important;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 
-#custom-domain-label {
+.spaced {
+	margin-top: 20px;
+	margin-bottom: 15px;
+}
+
+.custom-domain-label {
 	font-size: 1.3rem;
-	width: 290px;
+	width: 290px !important;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	padding-top: 0px !important;
-	padding-bottom: 0px !important;
-	margin-bottom: 0px !important;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 .collapsible.popout > li {
