--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -5,7 +5,7 @@
 /* https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE */
 
 html, body {
-  min-width: 400px;
+  width: 400px;
   min-height: 400px;
   overflow: auto;
   -ms-overflow-style: none;
@@ -256,7 +256,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-right: 5px;
-	width: 100%;
+	width: 400px;
 }
 
 .remove-margin {
@@ -272,7 +272,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 
 .custom-domain-label {
 	font-size: 1.3rem;
-	width: 290px !important;
+	width: 290px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
