--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -259,6 +259,13 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	width: 400px;
 }
 
+.custom-inputID-collection {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	width: 400px;
+}
+
 .remove-margin {
 	padding-top: 0px;
 	padding-bottom: 0px;
