--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -247,12 +247,19 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	top: 18px;
 }
 
-.custom-domain-list {
+.custom-settings-options {
 	margin-top: 10px;
 	display: none;
 }
 
 .custom-domain-collection {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	width: 400px;
+}
+
+.custom-inputID-collection {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-right: 5px;
@@ -270,7 +277,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	margin-bottom: 15px;
 }
 
-.custom-domain-label {
+.custom-label {
 	font-size: 1.3rem;
 	width: 290px;
 	white-space: nowrap;
@@ -342,6 +349,16 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6e9de1',endColorstr='#3174f1',GradientType=0);
 /* IE6-9 */
 	box-shadow: none;
+}
+
+a.disabled i {
+	color: #9F9F9F;
+	cursor: default;
+}
+
+i.disabled {
+	color: #9F9F9F;
+	cursor: default;
 }
 
 .btn-floating i {
