EXT-1005: fix popup resizing issue by setting display in timeout

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -12,8 +12,11 @@ html, body {
 }
 
 body {
-	font-family: 'Source Sans Pro',Arial,sans-serif;
-	overflow: hidden;
+    font-family: 'Source Sans Pro',Arial,sans-serif;
+    overflow: hidden;
+    display: none;
+    opacity: 0;
+    transition: opacity 200ms ease;
 }
 
 nav {
